# content-collector

./: .bandit  .env.test  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PROJECT_SCOPE.md  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
migrations/: alembic.ini  env.py
migrations/versions/: 302cc84c3950_add_referer_url_column_to_pages_table.py
scripts/: README.md  branch_walker.py  run.sh  setup.sh
src/content_collector/: __init__.py  __main__.py  base.py  exceptions.py
src/content_collector/analytics/: __init__.py  reporting.py
src/content_collector/cli/: __init__.py  main.py
src/content_collector/config/: __init__.py  constants.py  performance.py  settings.py
src/content_collector/core/: __init__.py  base_fetcher.py  base_scraper.py  content_parser.py  enhanced_fetcher.py  enhanced_parser.py  enhanced_scraper.py  fetcher.py  intelligence.py  parser.py  playwright_manager.py  scraper.py  sitemap_parser.py
src/content_collector/input/: __init__.py  processor.py  processor.py.backup
src/content_collector/storage/: __init__.py  database.py  file_storage.py  models.py  (+1 more)
test_data/: educational.csv  input_urls.txt  news_sites.csv  papers.csv  stackblitz.csv  tech_blogs.csv  test_domains.csv  top_100.csv  wiki.csv
tests/: conftest.py
tests/e2e/: test_complete_flow.py
tests/integration/: test_domain_referrer_integration.py  test_workflow.py
tests/shared/: __init__.py  url_validation_mixin.py
tests/unit/: test_analytics_comprehensive.py  test_cli_comprehensive.py  test_content_parser.py  test_coverage_boost.py  test_database_comprehensive.py  test_domain_tracking.py  test_fetcher.py  test_file_storage_comprehensive.py  test_input_processor.py  test_logging_utils.py  test_loop_prevention.py  test_parser.py  test_parser_clean.py  test_parser_comprehensive.py  test_referer_logging.py  test_referrer_tracking.py  test_scraper.py  test_scraper_improved.py  test_sitemap_parser.py  test_storage.py  test_storage_clean.py  test_validators.py
(+5 files in other folders)
